# DeepLearning

./: .gitignore  assignment1.py  assigntment1bonus.ipynb  assigntment1bonus.py  pyproject.toml
src/: data.py  model.py  torch_gradient_computations.py  utils.py
tests/: test_data.py  test_utils.py
