[project]
name = "assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
